# NAT-Data-Collector

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  GenerateAndroidVisualStudioProject.bat  GenerateServerProjectAndRun.sh  GenerateServerVisualStudioProject.bat  GenerateVisualStudioProject.bat  LICENSE  README.md  StartMongoDB.sh  StartServer.sh
.github/workflows/: main.yml
AndroidPackaging/: AndroidPackaging.androidproj  NAT.androidproj
AndroidPackaging/app/: build.gradle.template
AndroidPackaging/app/src/main/: AndroidManifest.xml.template
AndroidPackaging/app/src/main/res/values/: ic_launcher_background.xml  strings.xml
AndroidSource/: CMakeLists.txt
AndroidSource/src/: TCPClient.h  main.cpp  pch.h
AndroidSource/src/Application/: Application.cpp  Application.h
AndroidSource/src/Components/: AwakeManager.cpp  AwakeManager.h  CollectSamples.cpp  CollectSamples.h  Config.cpp  Config.h  ConnectionReader.cpp  ConnectionReader.h  CopyLog.cpp  CopyLog.h  GlobCollectSamples.cpp  GlobCollectSamples.h  GlobIdle.cpp  GlobIdle.h  GlobTraverse.cpp  GlobTraverse.h  GlobUserGuidance.cpp  GlobUserGuidance.h  GlobalConstants.h  HTTPTask.cpp  HTTPTask.h  InputManager.cpp  InputManager.h  NatClassifier.cpp  NatClassifier.h  NatCollector.cpp  NatCollector.h  NatTraverserClient.cpp  NatTraverserClient.h  NetworkManager.cpp  NetworkManager.h  Renderer.cpp  Renderer.h  Scoreboard.cpp  Scoreboard.h  SensorManager.cpp  SensorManager.h  TCPClient.cpp  TCPClient.h  TCPTask.cpp  (+15 more)
AndroidSource/src/CustomCollections/: ComponentManager.h  ConcurrentQueue.h  Event.h  Log.h  SimpleTimer.h  TaskPlanner.h
AndroidSource/src/Model/: NatCollectorModel.cpp  NatCollectorModel.h
AndroidSource/src/Predictors/: Predictor.h
AndroidSource/src/UI/: InformationUpdateWindow.cpp  InformationUpdateWindow.h  JoinLobbyWindow.cpp  JoinLobbyWindow.h  LogWindow.cpp  LogWindow.h  MainScreen.cpp  MainScreen.h  PopUpWindow.cpp  PopUpWindow.h  ScoreboardWindow.cpp  ScoreboardWindow.h  StyleConstants.h  TraversalWindow.cpp  TraversalWindow.h  UIObject.h  UserWindow.cpp  UserWindow.h  VersionUpdateWindow.cpp  VersionUpdateWindow.h  WrongNatTypeWindow.cpp  WrongNatTypeWindow.h
AndroidSource/src/Utilities/: NetworkHelpers.h
AndroidSource/src/Utils/: ComponentManager.h
BuildScripts/: CollectConfigTemplate.json  DeobfuscateStackTrace.bat  GenerateAndroid64VisualStudioProject.bat  GenerateAndroidVisualStudioProject.bat  GenerateConfigs.bat  GenerateServerVisualStudioProject.bat  ServerExceptionToLine.sh  StartMongoDB.sh  StartServer.sh  StartServerDebug.sh  nat-server-debug.service  nat-server.service
ServerSource/: CMakeLists.txt  mongo_config_template.json
ServerSource/src/: main.cpp
ServerSource/src/RequestHandler/: BaseRequestHandler.h  MongoRequestHandler.h  ServerTransactionHandler.cpp  ServerTransactionHandler.h  SessionRequestHandler.h  TransactionFactory.cpp  TransactionFactory.h
ServerSource/src/Server/: AddressRequest.cpp  AddressRequest.h  Server.cpp  Server.h  Session.cpp  Session.h  TCPSessionHandler.h  TransactionHandler.h
ServerSource/src/Singletons/: MongoContext.h  ServerConfig.h
ServerSource/src/Utils/: AutoDestruct.h  AutoDestructTemplates.h  DBUtils.h  MongoContext.h  ServerUtils.h  SmartDestruct.h  SmartDestructTemplates.h
Shared/: Compression.h  SharedData.h  SharedHelpers.h  SharedProtocol.h  SharedTypes.h
Shared/Data/: Address.h  IPMetaData.h  ScoreboardData.h  Traversal.h  WindowData.h
Shared/RequestFactories/: MongoRequestFactories.h  RequestFactory.h  RequestFactoryHelper.h  UtilityRequestFactories.h
